// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="panel open_panel flex-100 layout-row layout-wrap layout-align-start-center"
>
  <div
    className="detailed_row_aggregated flex-100 layout-row layout-wrap layout-align-none-center"
  >
    <div
      className="flex-33 layout-row layout-align-space-around"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            4.00
          </span>
            kg 
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Gross Weight
        </p>
      </div>
    </div>
    <div
      className="flex-33 layout-row layout-align-space-around"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            5.000
          </span>
            m
          <sup>
            3
          </sup>
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Volume
        </p>
      </div>
    </div>
    <div
      className="flex-33 layout-row layout-align-space-around"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            7.00
          </span>
           kg
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Chargeable Weight
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`size_class is truthy 1`] = `
<div
  className="panel open_panel flex-100 layout-row layout-wrap layout-align-start-center"
>
  <div
    className="detailed_row_aggregated flex-100 layout-row layout-wrap layout-align-none-center"
  >
    <div
      className="flex-33 layout-row layout-align-space-around"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            4.00
          </span>
            kg 
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Gross Weight
        </p>
      </div>
    </div>
    <div
      className="flex-33 layout-row layout-align-space-around"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            5.000
          </span>
            m
          <sup>
            3
          </sup>
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Volume
        </p>
      </div>
    </div>
    <div
      className="flex-33 layout-row layout-align-space-around"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          />
           kg
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Chargeable Weight
        </p>
      </div>
    </div>
  </div>
</div>
`;
